# bsdiff-rust

./: .gitattributes  .gitignore  CI_README.md  Cargo.toml  PATCH_OPTIMIZATION.md  README-ZH.md  README.md  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  publish.yml  test.yml
benchmark/: Cargo.toml  README.md  benchmark.rs  benchmark.ts  tsconfig.json
src/: bsdiff_rust.rs  lib.rs  utils.rs
test/: index.ts  test.js
test/resources/: download.txt
