
[package]
authors = ["min.su <sumin1500160640@gmail.com>"]
description = "A Rust implementation of bsdiff and bspatch"
edition = "2021"
name = "bsdiff_rust"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
bsdiff = "0.2.1"
bzip2 = "0.4"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
