
[package]
authors     = ["min.su <sumin1500160640@gmail.com>"]
description = "A Rust implementation of bsdiff and bspatch"
edition     = "2021"
name        = "node"
version     = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bsdiff      = "0.2.1"
zstd        = "0.13"      # 高性能压缩算法
memmap2     = "0.9"       # 内存映射支持
rayon       = "1.8"       # 并行处理支持
napi        = "3.0.0"
napi-derive = "3.0.0"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
